--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
 # tasks file for ansible-podman-role
+# Setup/install tasks.
+- include_tasks: setup-RedHat.yml
+  when: ansible_os_family == 'RedHat'
+
+#- include_tasks: setup-Debian.yml
+#  when: ansible_os_family == 'Debian'
