--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,12 +1,11 @@
 ---
-  - name: Re-create a redis container
-    containers.podman.podman_container:
-      name: sarthak
-      image: httpd
-      state: started
-      detach: true
+- name: Run container
+  containers.podman.podman_container:
+    name: container
+    image: hello-world
+    state: started
       exposed_ports:
         - 80
       ports:
         - 4444:80
-      volumes: /home/:/usr/local/apache2/htdocs/
+  
