--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -9,4 +9,4 @@
 
 - name: Show test output
   debug:
-    msg: "{{ podman_container_output.ansible_facts.podman_container.Output }}"
+    var: podman_container_output
